# prism

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  skills-lock.json  vite.config.ts
.claude/skills/prism-design/: SKILL.md
.claude/skills/prism-feature/: SKILL.md
.github/: AI_PR_REVIEW_SETUP.md  pr-review.yml
.github/scripts/: pr_review.py
.github/workflows/: ai-pr-review.yml  pr-checks.yml  release.yml
docs/: PRD.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  db.rs  error.rs  github.rs  lib.rs  notifications.rs  tray.rs  update_checker.rs
src/components/: add-repo-dialog.tsx  command-palette.tsx  comment-card.tsx  comment-editor.tsx  dashboard.tsx  diff-viewer.tsx  highlighted-text.tsx  inbox-sidebar-link.tsx  inbox.tsx  login-form.tsx  markdown.tsx  pr-viewer.tsx  repo-list.tsx  repo-pr-list.tsx  review-thread-card.tsx  search-sidebar-link.tsx  settings-dialog.tsx  update-pill.tsx  user-menu.tsx
src/components/ui/: command.tsx  hover-card.tsx
src/lib/: api.ts  diff.ts  format.ts  highlight.ts  reasons.ts  use-notifications.ts
