[package]
name = "prism"
version = "0.1.0"
description = "Desktop client for GitHub Pull Requests."
authors = ["Israel Araujo de Oliveira"]
license = "MIT"
repository = "https://github.com/IsraelAraujo70/prism"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
thiserror = "2"
open = "5"
